security: Address critical audit findings
Phase 1 security fixes:
- Restrict CORS to allowed origins (env ALLOWED_ORIGINS)
- Add WebSocket max payload limit (10MB)
- Add per-connection rate limiting (20 req/min)
- Add audio input size validation
- Sanitize error messages to client (no internal details)
- Extract magic numbers to named constants
- Fix comment: Clawdbot -> Moltbot

Addresses issues #1, #3, #4, #8, #11, #14, #19 from audit

--- a/server/.env.example
+++ b/server/.env.example
@@ -22,6 +22,9 @@ SESSION_KEY=agent:main:main
 # Server port
 PORT=3001
 
+# Allowed CORS origins (comma-separated, defaults to localhost + GitHub Pages)
+# ALLOWED_ORIGINS=http://localhost:5173,https://yourusername.github.io
+
 # =============================================================================
 # Branding (optional - defaults to Moltbot)
 # =============================================================================
