--- a/pwa/package.json
+++ b/pwa/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/dompurify": "^3.0.5",
     "svelte": "^5.19.5",
     "svelte-check": "^4.1.4",
     "typescript": "^5.7.3",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "@ricky0123/vad-web": "^0.0.18",
+    "dompurify": "^3.3.1",
     "marked": "^15.0.6",
     "onnxruntime-web": "^1.14.0"
   }
